--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,11 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/wifi_positioning"
-        android:label="@string/app_name"
+        android:label="You are here"
         android:theme="@style/AppTheme">
         <activity
             android:name=".RecordActivity"
-            android:label="@string/app_name">
+            android:label="You are here">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -24,8 +24,7 @@
         <activity
             android:name=".ContinuousRecordActivity"
             android:label="Record along path"
-            android:screenOrientation="portrait"
-            />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".SettingsActivity"
             android:label="@string/title_activity_settings" />
@@ -39,12 +38,15 @@
         </activity>
         <activity
             android:name=".SearchShopActivity"
-            android:label="@string/title_activity_search_shop"
+            android:label="Select a shop"
             android:parentActivityName=".RecordActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.cogn.wifirecord.RecordActivity" />
         </activity>
+        <activity
+            android:name=".SelectCenterActivity"
+            android:label="Select a center"/>
     </application>
 
 </manifest>
